package SmartHomeDDD.ddd;

public interface AggregateRoot<ID extends DomainID> extends DomainEntity<ID> {

}
